# hr_system_wxWidgets_sqlite3

./: CMakeLists.txt  todo.markdown
resources/sql/: big_employee_table.sql  test.sql
src/: hr_system.cpp  hr_system.h  main.cpp
src/backup/: database_manager_backup_7_10.cpp  database_manager_backup_7_10.h
src/cli/: cli_util.cpp  cli_util.h
src/core/database/: database.cpp  database.h  database_exception.cpp  database_exception.h  database_file_handler.h  database_manager.cpp  database_manager.h  database_ops_base.cpp  database_search_manager.h  database_stmt_builder.cpp  database_stmt_builder.h  database_table_manager.cpp  database_table_manager.h  transaction_manager.h
src/core/database/schema/: column_definition.cpp  column_definition.h  table_schema.cpp  table_schema.h
src/core/database/stmt_builder/: column_definition.h  database_stmt_builder_exception.cpp  database_stmt_builder_exception.h  database_table_manager.h  table_builder.cpp  table_builder.h  table_schema.h  where_builder.cpp  where_builder.h
src/gui/: database_editor_panel.cpp  database_editor_panel.h  database_grid_manager.cpp  database_grid_manager.h  database_search_manager.cpp  database_search_manager.h  main_frame.cpp  main_frame.h  welcome_panel.cpp  welcome_panel.h  wx_database_editor_panel.cpp  wx_database_editor_panel.h  wx_database_grid_panel.cpp  wx_database_grid_panel.h  wx_search_panel.cpp  wx_test.cpp
src/gui/dialog/: wx_base_dialog.cpp  wx_base_dialog.h  wx_create_table_dialog.cpp  wx_create_table_dialog.h  wx_database_manager_dialog.cpp  wx_database_manager_dialog.h  wx_get_file_path_dialog.cpp  wx_get_file_path_dialog.h  wx_get_folder_path_dialog.cpp  wx_get_folder_path_dialog.h  wx_import_dialog.cpp  wx_import_dialog.h  wx_table_manager_dialog.cpp  wx_table_manager_dialog.h  wx_table_schema_dialog.cpp  wx_table_schema_dialog.h
src/gui/event/: custom_event.cpp  custom_event.h  evt_cell_commit.cpp  evt_cell_commit.h
src/gui/gui_components/: cb_select_popup.cpp  cb_select_popup.h  horizontal_panel.h  labeled_text_ctrl.cpp  labeled_text_ctrl.h  listbox.cpp  listbox.h  smart_grid.cpp  smart_grid.h  wx_editable_grid.h  wx_editable_grid_panel.cpp  wx_editable_grid_panel.h  wx_search_panel.cpp  wx_search_panel.h  wx_table_schema_grid_panel.h
src/gui/gui_components/grid_panel/: wx_database_editor_grid_panel.cpp  wx_database_editor_grid_panel.h  wx_editable_grid_panel.cpp  wx_editable_grid_panel.h  wx_table_schema_grid_panel.cpp  wx_table_schema_grid_panel.h
src/gui/gui_components/search_panel/: advance_search_panel.cpp  advance_search_panel.h  base_search_panel.h  basic_search_panel.cpp  basic_search_panel.h  wx_search_panel.cpp  wx_search_panel.h
src/old_and_unused/: database_editor_panel.cpp  database_editor_panel.h  database_file_handler.cpp  database_grid_manager.cpp  database_ops_base.cpp  database_ops_base.h  transaction_manager.cpp  wx_editable_grid.cpp  wx_editable_grid.h
